@@ -1,51 +1,0 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
-<head>
-<meta http-equiv="content-type" content="text/html; charset=ISO-8859-1" />
-<link rel="stylesheet" type="text/css" media="screen, projection" href="style.css" />
-<link rel="stylesheet" type="text/css" media="print" href="print.css" />
-<title>Mowyw example: page `bar'</title>
-</head>
-
-<body id="home">
-
-<div id="header">
-	<h1>Mowyw Example</h1>
-	<p>Lore Impsum</p>
-</div>
-<div id="nav-page">
-<h2>Quick access</h2>
-<ul>
-<li><a href="#nav-main">Site navigation</a></li>
-<li><a href="#nav-secondary">Recent articles</a></li>
-</ul>
-</div>
-
-<div id="content-main">
-
-
-<h2>Some Foo Bar</h2>
-
-<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed ut dui ac lacus egestas vehicula. Quisque faucibus, risus id consequat porta, orci ligula condimentum mi, ac commodo leo libero eget tortor. Maecenas a ligula in nibh luctus gravida. Praesent vehicula rhoncus tortor. <a href="#">Donec porta rutrum dui.</a> Donec dignissim congue mauris. Sed rhoncus laoreet sem. Nam dui pede, vestibulum convallis, posuere ut, dictum eu, diam. Phasellus nunc. Ut eget ante a ipsum porttitor scelerisque. Quisque auctor elit vitae massa. Vestibulum massa risus, gravida quis, hendrerit sit amet, bibendum sit amet, enim. Fusce nulla. Quisque vulputate metus vitae orci. Pellentesque at arcu. Ut sed neque.</p>
-
-</div>
-
-<div id="nav-main">
-<h2>Navigation</h2>
-<ul>
- <li><a  href="index.shtml">Home</a></li>
- <li><a  href="foo.shtml">foo</a>
-</li>
- <li><a class="active" href="bar.shtml">bar</a></li>
-</ul>
-</div>
-
-
-<p id="footer">
-Powered by <a href="http://moritz.faui2k3.org/en/mowyw">mowyw</a> | <a href="#">Imprint</a> | Design by Dimiter Petrov
-</p>
-
-</body>
-</html>
