@@ -1,58 +1,0 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
-<head>
-<meta http-equiv="content-type" content="text/html; charset=ISO-8859-1" />
-<link rel="stylesheet" type="text/css" media="screen, projection" href="style.css" />
-<link rel="stylesheet" type="text/css" media="print" href="print.css" />
-<title>Mowyw example: page foo1</title>
-</head>
-
-<body id="home">
-
-<div id="header">
-	<h1>Mowyw Example</h1>
-	<p>Lore Impsum</p>
-</div>
-<div id="nav-page">
-<h2>Quick access</h2>
-<ul>
-<li><a href="#nav-main">Site navigation</a></li>
-<li><a href="#nav-secondary">Recent articles</a></li>
-</ul>
-</div>
-
-<div id="content-main">
-
-
-<h2>foo2 is another sub item of foo</h2>
-
-<p>And now I'm running out of ideas what to write</p>
-
-</div>
-
-<div id="nav-main">
-<h2>Navigation</h2>
-<ul>
- <li><a  href="index.shtml">Home</a></li>
- <li><a class="active" href="foo.shtml">foo</a>
-
-	<ul>
-		 <li><a href="foo1.shtml" 
-		style="margin-left:2em!important">foo1</a></li>
-		 <li><a href="foo2.shtml" class="active"
-		style="margin-left:2em!important">foo2</a></li>
-	</ul>
-</li>
- <li><a  href="bar.shtml">bar</a></li>
-</ul>
-</div>
-
-
-<p id="footer">
-Powered by <a href="http://moritz.faui2k3.org/en/mowyw">mowyw</a> | <a href="#">Imprint</a> | Design by Dimiter Petrov
-</p>
-
-</body>
-</html>
