@@ -1,3 +1,0 @@
-This file should not have a header or footer attached to it
-
-
