@@ -32,6 +32,7 @@ use Mowyw::Lexer qw(lex);
 use Carp;
 use Storable qw(dclone);
 
+use Encode;
 use Data::Dumper;
 
 sub process_file($);
